<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderingDonutsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/donutRecView"
        android:layout_width="409dp"
        android:layout_height="552dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/addToOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutRecView"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/subTotal"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:text="@string/subtotal2"
        app:layout_constraintBottom_toBottomOf="@+id/addToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/addToOrder"
        app:layout_constraintTop_toTopOf="@+id/addToOrder"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/subTotal2"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:text="@string/subtotal3"
        app:layout_constraintBottom_toBottomOf="@+id/addToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toEndOf="@+id/addToOrder"
        app:layout_constraintTop_toTopOf="@+id/addToOrder"
        app:layout_constraintVertical_bias="0.533" />

</androidx.constraintlayout.widget.ConstraintLayout>